Fix safari bug where bottom of page is cutoff

--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -35,9 +35,10 @@ a {
 }
 
 .main {
+  position: relative;
   .page {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 
