--- a/webapp/src/styles/template.scss
+++ b/webapp/src/styles/template.scss
@@ -6,6 +6,6 @@
 }
 
 .doc-page {
-  height: 100%;
+  min-height: 100%;
   position: relative;
 }
